unpackaged/main/default/objects/PagesApi__Theme__c/PagesApi__Theme__c.object-meta.xml
<CustomObject>
    <description>Themes store configurations for page style and branding.</description>
    <label>Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>