unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Body_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Body_Background_Color__c</fullName>
    <description>Valid hexadecimal, rgb, or rgba notation required.</description>
    <inlineHelpText>Valid hexadecimal, rgb, or rgba notation required.</inlineHelpText>
    <label>Body Background</label>
    <length>10</length>
    <type>Text</type>
</CustomField>