unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Community_Styles__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Community_Styles__c</fullName>
    <description>Generated Styles for Community.</description>
    <inlineHelpText>Generated Styles for Community.</inlineHelpText>
    <label>SYSTEM</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>