unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Custom_CSS__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Custom_CSS__c</fullName>
    <description>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</description>
    <inlineHelpText>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</inlineHelpText>
    <label>Custom CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>