unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Custom_Print_Stylesheet_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Custom_Print_Stylesheet_URL__c</fullName>
    <description>Secure (&quot;https://&quot;) url to the location of a custom stylesheet to use for rendering pages for print media.</description>
    <inlineHelpText>Secure (&quot;https://&quot;) url to the location of a custom stylesheet to use for rendering pages for print media.</inlineHelpText>
    <label>Custom Print Stylesheet URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>