unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Custom_Stylesheet_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Custom_Stylesheet_URL__c</fullName>
    <description>The secure (&quot;https://&quot;) url where the stylesheet is hosted.</description>
    <inlineHelpText>The secure (&quot;https://&quot;) url where the stylesheet is hosted.</inlineHelpText>
    <label>Custom Stylesheet URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>