unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Description__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Description__c</fullName>
    <description>Optional description for the Theme.</description>
    <inlineHelpText>Optional description for the Theme.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>