unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Favicon_Image__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Favicon_Image__c</fullName>
    <description>The image to use for a favicon used for visual site identification in various browser interfaces (bookmarks,tabs,etc...).</description>
    <inlineHelpText>The image to use for a favicon used for visual site identification in various browser interfaces (bookmarks,tabs,etc...).</inlineHelpText>
    <label>Favicon Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>