unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Footer__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Footer__c</fullName>
    <description>Custom HTML to display in the footer of all pages that use the theme.</description>
    <inlineHelpText>Custom HTML to display in the footer of all pages that use the theme.</inlineHelpText>
    <label>Footer</label>
    <length>55000</length>
    <type>LongTextArea</type>
</CustomField>