unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Header__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Header__c</fullName>
    <description>Custom HTML to display in the header of all pages that use the theme.</description>
    <inlineHelpText>Custom HTML to display in the header of all pages that use the theme.</inlineHelpText>
    <label>Header</label>
    <length>55000</length>
    <type>LongTextArea</type>
</CustomField>