unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__HTML_Head__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__HTML_Head__c</fullName>
    <description>Insert custom scripts and styles before the closing &lt;/head&gt; tag into pages that use this Theme.</description>
    <inlineHelpText>Insert custom scripts and styles before the closing &lt;/head&gt; tag into pages that use this Theme.</inlineHelpText>
    <label>HTML Head</label>
    <length>55000</length>
    <type>LongTextArea</type>
</CustomField>