unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Logo_Image__c</fullName>
    <description>The secure (&quot;https://&quot;) url where the logo image file is located. We recommend uploading a logo that is of equal height and width and less than 20kb with a 72dpi resolution. The minimum height and width is 150px the maximum is 1000px.</description>
    <inlineHelpText>The secure (&quot;https://&quot;) url where the logo image file is located. We recommend uploading a logo that is of equal height and width and less than 20kb with a 72dpi resolution. The minimum height and width is 150px the maximum is 1000px.</inlineHelpText>
    <label>Logo Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>