unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Logo_Text__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Logo_Text__c</fullName>
    <description>If a logo image is not defined for the Theme the logo text will be used by default. Applies only for themes using &quot;Fonteva Drive&quot; as a stylesheet template.</description>
    <inlineHelpText>If a logo image is not defined for the Theme the logo text will be used by default. Applies only for themes using &quot;Fonteva Drive&quot; as a stylesheet template.</inlineHelpText>
    <label>Logo Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>