unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Logo_URL__c</fullName>
    <description>The url of the web page to direct users when they click the logo text or logo image on any web page using this Theme. Valid only for Themes using &quot;Fonteva Drive&quot; as a stylesheet template.</description>
    <inlineHelpText>The url of the web page to direct users when they click the logo text or logo image on any web page using this Theme. Valid only for Themes using &quot;Fonteva Drive&quot; as a stylesheet template.</inlineHelpText>
    <label>Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>