unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Navbar_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Navbar_Background_Color__c</fullName>
    <defaultValue>&quot;#F1F1F1&quot;</defaultValue>
    <description>The background color to use for the primary navigation bar affixed to the top of community related pages.</description>
    <inlineHelpText>The background color to use for the primary navigation bar affixed to the top of community related pages.</inlineHelpText>
    <label>Navbar Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>