unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Navbar_Link_Color__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Navbar_Link_Color__c</fullName>
    <defaultValue>&quot;#555555&quot;</defaultValue>
    <description>The color to use for links contained inside the primary navigation bar affixed to the top of community related pages.</description>
    <inlineHelpText>The color to use for links contained inside the primary navigation bar affixed to the top of community related pages.</inlineHelpText>
    <label>Navbar Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>