unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Supernav_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Supernav_Background_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>The background color to use for the supernav.</description>
    <inlineHelpText>The background color to use for the supernav.</inlineHelpText>
    <label>Supernav Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>