unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Supernav_HTML_Position_1__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Supernav_HTML_Position_1__c</fullName>
    <description>The Text/HTML for the Supernav Position #1.</description>
    <inlineHelpText>The Text/HTML for the Supernav Position #1.</inlineHelpText>
    <label>Supernav HTML Position 1</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>