unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Supernav_HTML_Position_3__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Supernav_HTML_Position_3__c</fullName>
    <description>The Text/HTML for the Supernav Position #3.</description>
    <inlineHelpText>The Text/HTML for the Supernav Position #3.</inlineHelpText>
    <label>Supernav HTML Position 3</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>