unpackaged/main/default/objects/PagesApi__Theme__c/fields/PagesApi__Supernav_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Supernav_Text_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>The color to use for text contained inside the supernav.</description>
    <inlineHelpText>The color to use for text contained inside the supernav.</inlineHelpText>
    <label>Supernav Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>