unpackaged/main/default/objects/PagesApi__Theme__c/listViews/PagesApi__All.listView-meta.xml
<ListView>
    <fullName>PagesApi__All</fullName>
    <columns>NAME</columns>
    <columns>PagesApi__Body_Background_Color__c</columns>
    <columns>PagesApi__Brand_Primary__c</columns>
    <columns>PagesApi__Brand_Secondary__c</columns>
    <columns>PagesApi__Link_Color__c</columns>
    <columns>PagesApi__Text_Color__c</columns>
    <columns>PagesApi__Logo_Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>